--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,12 @@ services:
   #     - 2106:2106
   db:
     build: ./.docker/mongodb
-    image: mongodb_multi_nodes
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
+    image: ikaromontanari/mongodb_multi_nodes
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: root
+    #   MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - 27017:27017
+
+
+
